# esp32-c3-rs

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults  toolchain.toml
.cargo/: config.toml
crates/01-hello-board/: Cargo.toml  build.rs
crates/01-hello-board/src/: main.rs
crates/02-hello-world/: Cargo.toml  build.rs
crates/02-hello-world/src/: main.rs
crates/03-http-client/: Cargo.toml  build.rs
crates/03-http-client/src/: main.rs
crates/get-uuid/: Cargo.toml  _uuid.rs  build.rs  uuid.toml
crates/mqtt-messages/: Cargo.toml
crates/mqtt-messages/src/: lib.rs
crates/rgb-led/: Cargo.toml
crates/rgb-led/examples/: ws2812.rs
crates/rgb-led/src/: lib.rs
crates/wifi/: Cargo.toml  build.rs
crates/wifi/examples/: wifi.rs
crates/wifi/src/: lib.rs
